# text_challenge

./: .gitignore  README.md  main.py  pyproject.toml
examples/: search_example.py
src/patent_search/: config.py
src/patent_search/api/: app.py  endpoints.py
src/patent_search/core/: indexer.py  processor.py  searcher.py
src/patent_search/data_manager/: data_manager.py
src/patent_search/service/: patent_service.py  schemas.py
src/tests/: test_indexer.py  test_processor.py  test_qdrant_indexer.py  test_searcher.py  test_service.py
tests/: test_indexer.py  test_processor.py  test_qdrant_indexer.py  test_searcher.py  test_service.py
text_challenge/: config.py
text_challenge/api/: app.py  endpoints.py
text_challenge/core/: indexer.py  processor.py  searcher.py
text_challenge/data_manager/: data_manager.py
text_challenge/service/: patent_service.py  schemas.py
text_challenge/static/: index.html
text_challenge/utils/: logger.py
