[tool.poetry]
name = "text-challenge"
version = "0.1.0"
description = ""
authors = ["Raoul van Rossum"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sentence-transformers = "^2.2.2"
faiss-cpu = "^1.7.4"
langdetect = "^1.0.9"
pandas = "^2.0.0"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"
pydantic = "^2.0.0"
python-multipart = "^0.0.6"
loguru = "^0.7.0"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.1"
numpy = "^2.2.1"
qdrant-client = "^1.12.2"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:_frozen_importlib_external.*:",
    "ignore::DeprecationWarning:importlib._bootstrap.*:"
]